--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <img alt="ReactJS.berlin" src="img/react-berlin-logo.svg" class="logo" />
       </a>
       <p class="ug-info triangle-border left"> ReactJS.berlin was an early React user group run by
-        <a href="http://bitcrowd.net">Bitcrowd</a>. We at bitcrowd are happy that the React community in Berlin has 
+        <a href="http://bitcrowd.net">bitcrowd</a>. We at bitcrowd are happy that the React community in Berlin has 
         now expanded to so many user groups and events, that it does no longer need this regular meetup as support.</p>
     </div>
   </header>
@@ -70,8 +70,8 @@
         </p>  
         <p>You're still looking for React meetups and events in Berlin?</p>
         <p>
-          Take a look at <a href="https://www.meetup.com/topics/reactjs/de/berlin/?country=de&zipstatecity=berlin&state=&radius=40">
-          meetup.com</a>, where you'll find many meetups happening around Berlin. 
+          Take a look at <a href="https://www.meetup.com/topics/reactjs/de/berlin/?country=de&zipstatecity=berlin&state=&radius=40" 
+          title="Berlin’s finest JavaScript Usergroup"> meetup.com</a>, where you'll find many meetups happening around Berlin. 
           <a href="https://berlinjs.org/">berlinjs.org</a> is an especially great place to start.
         </p>
       </div>
@@ -80,7 +80,7 @@
         <p>Provide everything your participants need, in the heart of Kreuzberg.</p>
         <p>Make your event a success! Be accommodating to different needs, and provide a great learning environment.</p>
         <p>
-          The <a href="http://bitcrowd.net" title="bitcrowd.net office">bitcrowd</a> office offers a bright, large 
+          The <a href="http://bitcrowd.net">bitcrowd office</a> office offers a bright, large 
           space that you can use for community events. It has a capacity of 90 people seated, or 30 people with desks 
           for courses. Elevator access can be arranged.
         </p>
@@ -89,14 +89,14 @@
         <h2>Get help from React experts</h2>
         <p>Fix problems with your react project</p>
         <p>
-          We at <a href="http://bitcrowd.net" title="bitcrowd.net office">@bitcrowd</a> have created many ReactJS 
+          We at <a href="http://bitcrowd.net" title="bitcrowd.net office">bitcrowd</a> have created many ReactJS 
           applications for our clients over the past few years. Just drop us an email or give us a call and we'll 
           see how we can help your project.
         </p>
       </div>
     </div>
     <section class="clearfix three-cols">
-      <div itemscope="" itemtype="http://schema.org/Organization">
+      <div itemscope itemtype="http://schema.org/Organization">
         <h3>Get in touch</h3>
         <ul>
           <li itemprop="email">
@@ -200,12 +200,10 @@
   </footer>
 
   <script>
-    (function (i, s, o, g, r, a, m) {
-      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-        (i[r].q = i[r].q || []).push(arguments)
-      }, i[r].l = 1 * new Date(); a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
     ga('create', 'UA-87838740-1', 'auto');
     ga('send', 'pageview');
   </script>
