--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         </p>
       </div>
     </div>
-    <section class="clearfix three-cols">
-      <div itemscope itemtype="http://schema.org/Organization">
+    <section class="clearfix three-cols" itemscope itemtype="http://schema.org/Organization">
+      <div>
         <h3>Get in touch</h3>
         <ul>
           <li itemprop="email">
@@ -129,19 +129,17 @@
           Open in google maps</a>
       </div>
       <div>
-        <div>
-          <h3>The team</h3>
-          <p>ReactJS.berlin was organized by
-            <a href="http://www.twitter.com/chris_bitcrowd" title="Follow Chris on Twitter">Christoph Beck</a> from 
-            <a href="http://www.twitter.com/bitcrowd" title="Follow bitcrowd on Twitter">@bitcrowd</a>. Design by <a
-              href="http://www.twitter.com/m_besser" title="Follow Matti on Twitter">Matti Besser</a> &amp; <a
-              href="http://www.twitter.com/plankton" title="Follow Darren on Twitter">Darren Cadwallader</a>.
-            <p>The template for this page is the glorious <a href="http://berlinjs.org/"
-                title="Berlin's finest JavaScript Usergroup">berlinjs.org page</a>, with kind permission from <a
-                href="http://www.twitter.com/rmehner" title="Follow Robin on Twitter">Robin Mehner</a>.
-            </p>
+        <h3>The team</h3>
+        <p>ReactJS.berlin was organized by
+          <a href="http://www.twitter.com/chris_bitcrowd" title="Follow Chris on Twitter">Christoph Beck</a> from 
+          <a href="http://www.twitter.com/bitcrowd" title="Follow bitcrowd on Twitter">@bitcrowd</a>. Design by <a
+            href="http://www.twitter.com/m_besser" title="Follow Matti on Twitter">Matti Besser</a> &amp; <a
+            href="http://www.twitter.com/plankton" title="Follow Darren on Twitter">Darren Cadwallader</a>.
+          <p>The template for this page is the glorious <a href="http://berlinjs.org/"
+              title="Berlin's finest JavaScript Usergroup">berlinjs.org page</a>, with kind permission from <a
+              href="http://www.twitter.com/rmehner" title="Follow Robin on Twitter">Robin Mehner</a>.
           </p>
-        </div>
+        </p>
       </div>
     </section>
   </main>
