Remove 'title' attribute, fix punctuation, fix indentation, lint

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <img alt="ReactJS.berlin" src="img/react-berlin-logo.svg" class="logo" />
       </a>
       <p class="ug-info triangle-border left"> ReactJS.berlin was an early React user group run by
-        <a href="http://bitcrowd.net">bitcrowd</a>. We at bitcrowd are happy that the React community in Berlin has 
+        <a href="http://bitcrowd.net">bitcrowd</a>. We at bitcrowd are happy that the React community in Berlin has
         now expanded to so many user groups and events, that it does no longer need this regular meetup as support.</p>
     </div>
   </header>
@@ -59,39 +59,37 @@
       </header>
       <div class="clearfix">
         <p>When we started this event in 2015, it was the first React-focused meetup in Berlin and the community
-          was still young. Now, some years and many great meetups later, several other similar events around React 
-          have evolved. So we find that running another one just doesn’t make sense anymore.</p>
+          was still young. Now, some years and many great meetups later, several other similar events around React
+          have evolved. So we find that running another one just doesn’t make sense anymore.
+        </p>
       </div>
     </article>
     <div class="clearfix three-cols">
       <div class="speaker">
         <h2>React meetups in Berlin</h2>
-        <p>Join with other developers of all skill levels. Share knowledge. Improve your React skills. Meet the JS community.
-        </p>  
-        <p>You're still looking for React meetups and events in Berlin?</p>
+        <p>You′re still looking for React meetups and events in Berlin?</p>
         <p>
-          Take a look at <a href="https://www.meetup.com/topics/reactjs/de/berlin/?country=de&zipstatecity=berlin&state=&radius=40" 
-          title="Berlin’s finest JavaScript Usergroup"> meetup.com</a>, where you'll find many meetups happening around Berlin. 
+          Take a look at <a
+            href="https://www.meetup.com/topics/reactjs/de/berlin/?country=de&zipstatecity=berlin&state=&radius=40">
+            meetup.com</a>, where you′ll find many meetups happening around Berlin.
           <a href="https://berlinjs.org/">berlinjs.org</a> is an especially great place to start.
         </p>
       </div>
       <div class="speaker">
         <h2>Host an event</h2>
-        <p>Provide everything your participants need, in the heart of Kreuzberg.</p>
         <p>Make your event a success! Be accommodating to different needs, and provide a great learning environment.</p>
         <p>
-          The <a href="http://bitcrowd.net">bitcrowd office</a> office offers a bright, large 
-          space that you can use for community events. It has a capacity of 90 people seated, or 30 people with desks 
-          for courses. Elevator access can be arranged.
+          The <a href="http://bitcrowd.net">bitcrowd office</a> offers a bright, large space that you can use
+          for community events. It has a capacity of 90 people seated, or 30 people with desks for courses. Elevator
+          access can be arranged.
         </p>
       </div>
       <div class="speaker">
         <h2>Get help from React experts</h2>
         <p>Fix problems with your react project</p>
         <p>
-          We at <a href="http://bitcrowd.net" title="bitcrowd.net office">bitcrowd</a> have created many ReactJS 
-          applications for our clients over the past few years. Just drop us an email or give us a call and we'll 
-          see how we can help your project.
+          We at <a href="http://bitcrowd.net">bitcrowd</a> have created many ReactJS applications for our clients over
+          the past few years. Just drop us an email or give us a call and we′ll see how we can help your project.
         </p>
       </div>
     </div>
@@ -125,13 +123,14 @@
           <span itemprop="postalCode">10997</span>
           <span itemprop="addressLocality">Berlin<br>Germany</span>
         </address>
-        <a href="https://www.google.de/maps/place/Oranienstra%C3%9Fe+6,+10997+Berlin/@52.4998919,13.4244531,18z/data=!3m1!4b1!4m5!3m4!1s0x47a84e350a669333:0x3dc79e96d74bd57b!8m2!3d52.4998919!4d13.425056">
+        <a
+          href="https://www.google.de/maps/place/Oranienstra%C3%9Fe+6,+10997+Berlin/@52.4998919,13.4244531,18z/data=!3m1!4b1!4m5!3m4!1s0x47a84e350a669333:0x3dc79e96d74bd57b!8m2!3d52.4998919!4d13.425056">
           Open in google maps</a>
       </div>
       <div>
         <h3>The team</h3>
         <p>ReactJS.berlin was organized by
-          <a href="http://www.twitter.com/chris_bitcrowd" title="Follow Chris on Twitter">Christoph Beck</a> from 
+          <a href="http://www.twitter.com/chris_bitcrowd" title="Follow Chris on Twitter">Christoph Beck</a> from
           <a href="http://www.twitter.com/bitcrowd" title="Follow bitcrowd on Twitter">@bitcrowd</a>. Design by <a
             href="http://www.twitter.com/m_besser" title="Follow Matti on Twitter">Matti Besser</a> &amp; <a
             href="http://www.twitter.com/plankton" title="Follow Darren on Twitter">Darren Cadwallader</a>.
@@ -150,7 +149,8 @@
         <h2>Past Meetups</h2>
         <ul>
           <li>
-            <a href='index_20180804.html'>04.08.2018 beginners workshop by</a> <a href="https://github.com/manjula91">Manjula Dube</a>
+            <a href='index_20180804.html'>04.08.2018 beginners workshop by</a> <a
+              href="https://github.com/manjula91">Manjula Dube</a>
           </li>
           <li>
             <a href='index_20170918.html'>18.09.2017 on Ladda, MobX and Inversify</a>
